roquette/WEB-INF/src/GrammarParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g 2014-01-09 00:23:47

import org.antlr.runtime.*;
import java.util.ArrayList;

public class GrammarParser extends Parser {
	public static final String[] tokenNames = new String[] { "<invalid>",
			"<EOR>", "<DOWN>", "<UP>", "SELECT", "COUNT", "ARTICLE", "PAGE",
			"RUBRIQUE", "MOT", "PARAITRE", "AUTEUR", "THEME", "TITRE",
			"VAR_EMAIL", "WS", "POINT", "JOUR", "CONJET", "CONJOU", "MOIS",
			"ANNEE", "VAR_DATE", "VAR_MOT" };
	public static final int VAR_MOT = 23;
	public static final int CONJOU = 19;
	public static final int ANNEE = 21;
	public static final int POINT = 16;
	public static final int VAR_EMAIL = 14;
	public static final int THEME = 12;
	public static final int PARAITRE = 10;
	public static final int COUNT = 5;
	public static final int EOF = -1;
	public static final int MOT = 9;
	public static final int AUTEUR = 11;
	public static final int PAGE = 7;
	public static final int WS = 15;
	public static final int RUBRIQUE = 8;
	public static final int JOUR = 17;
	public static final int MOIS = 20;
	public static final int CONJET = 18;
	public static final int VAR_DATE = 22;
	public static final int TITRE = 13;
	public static final int SELECT = 4;
	public static final int ARTICLE = 6;

	// delegates
	// delegators

	public GrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}

	public GrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);

	}

	public String[] getTokenNames() {
		return GrammarParser.tokenNames;
	}

	public String getGrammarFileName() {
		return "E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g";
	}

	// $ANTLR start "listerequetes"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:51:1: listerequetes
	// returns [String sql = \"\"] : r= requete POINT ;
	public final String listerequetes() throws RecognitionException {
		String sql = "";

		Arbre r = null;

		Arbre lr_arbre;
		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:52:25: (r=
			// requete POINT )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:53:3: r=
			// requete POINT
			{
				pushFollow(FOLLOW_requete_in_listerequetes457);
				r = requete();

				state._fsp--;

				match(input, POINT, FOLLOW_POINT_in_listerequetes459);

				lr_arbre = r;
				sql = lr_arbre.sortArbre();

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return sql;
	}

	// $ANTLR end "listerequetes"

	// $ANTLR start "requete"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:61:1: requete
	// returns [Arbre req_arbre = new Arbre(\"\")] : SELECT ( COUNT )? fields=
	// champs sr= sous_requetes[types.get(0)] ;
	public final Arbre requete() throws RecognitionException {
		Arbre req_arbre = new Arbre("");

		ArrayList<String> fields = null;

		Arbre sr = null;

		Arbre ps_arbre;
		boolean count = false;
		ArrayList<String> types;
		int i = 0;
		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:62:83: (
			// SELECT ( COUNT )? fields= champs sr= sous_requetes[types.get(0)]
			// )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:63:3: SELECT
			// ( COUNT )? fields= champs sr= sous_requetes[types.get(0)]
			{
				match(input, SELECT, FOLLOW_SELECT_in_requete487);

				req_arbre.ajouteFils(new Arbre("", "select distinct"));

				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:67:3: (
				// COUNT )?
				int alt1 = 2;
				int LA1_0 = input.LA(1);

				if ((LA1_0 == COUNT)) {
					alt1 = 1;
				}
				switch (alt1) {
				case 1:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:67:4:
				// COUNT
				{
					match(input, COUNT, FOLLOW_COUNT_in_requete499);

					count = true;
					req_arbre = new Arbre("");
					req_arbre.ajouteFils(new Arbre("", "select count"));

				}
					break;

				}

				pushFollow(FOLLOW_champs_in_requete516);
				fields = champs();

				state._fsp--;

				types = fields;

				pushFollow(FOLLOW_sous_requetes_in_requete526);
				sr = sous_requetes(types.get(0));

				state._fsp--;

				ps_arbre = sr;
				if (count) {
					req_arbre.ajouteFils(new Arbre("", "(distinct"));
				}
				for (String type : types) {
					if (i != 0) {
						req_arbre.ajouteFils(new Arbre("", ","));
					}
					i++;
					req_arbre.ajouteFils(new Arbre("",
							ps_arbre.fils.fils.categorie + "." + type));
				}
				if (count) {
					req_arbre.ajouteFils(new Arbre("", ")"));
				}
				req_arbre.ajouteFils(ps_arbre);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return req_arbre;
	}

	// $ANTLR end "requete"

	// $ANTLR start "champs"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:96:1: champs returns
	// [ArrayList<String> listField = new ArrayList<String>()] : field= champ (
	// conj field2= champ )* ;
	public final ArrayList<String> champs() throws RecognitionException {
		ArrayList<String> listField = new ArrayList<String>();

		String field = null;

		String field2 = null;

		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:97:11:
			// (field= champ ( conj field2= champ )* )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:98:2: field=
			// champ ( conj field2= champ )*
			{
				pushFollow(FOLLOW_champ_in_champs560);
				field = champ();

				state._fsp--;

				listField.add(field);

				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:101:2: (
				// conj field2= champ )*
				loop2: do {
					int alt2 = 2;
					int LA2_0 = input.LA(1);

					if (((LA2_0 >= CONJET && LA2_0 <= CONJOU))) {
						alt2 = 1;
					}

					switch (alt2) {
					case 1:
					// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:101:3:
					// conj field2= champ
					{
						pushFollow(FOLLOW_conj_in_champs566);
						conj();

						state._fsp--;

						pushFollow(FOLLOW_champ_in_champs572);
						field2 = champ();

						state._fsp--;

						listField.add(field2);

					}
						break;

					default:
						break loop2;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return listField;
	}

	// $ANTLR end "champs"

	// $ANTLR start "champ"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:105:1: champ returns
	// [String type] : ( ARTICLE | PAGE );
	public final String champ() throws RecognitionException {
		String type = null;

		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:106:11: (
			// ARTICLE | PAGE )
			int alt3 = 2;
			int LA3_0 = input.LA(1);

			if ((LA3_0 == ARTICLE)) {
				alt3 = 1;
			} else if ((LA3_0 == PAGE)) {
				alt3 = 2;
			} else {
				NoViableAltException nvae = new NoViableAltException("", 3, 0,
						input);

				throw nvae;
			}
			switch (alt3) {
			case 1:
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:107:2:
			// ARTICLE
			{
				match(input, ARTICLE, FOLLOW_ARTICLE_in_champ596);

				type = "article";

			}
				break;
			case 2:
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:110:4: PAGE
			{
				match(input, PAGE, FOLLOW_PAGE_in_champ603);

				type = "page";

			}
				break;

			}
		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return type;
	}

	// $ANTLR end "champ"

	// $ANTLR start "sous_requetes"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:114:1:
	// sous_requetes[String type] returns [Arbre sous_requete_arbres = new
	// Arbre(\"\")] : req= sous_requete (c= conj req2= sous_requete )* ;
	public final Arbre sous_requetes(String type) throws RecognitionException {
		Arbre sous_requete_arbres = new Arbre("");

		GrammarParser.sous_requete_return req = null;

		Arbre c = null;

		GrammarParser.sous_requete_return req2 = null;

		Arbre sr_WHERE = new Arbre("", "WHERE"), sr_FROM = new Arbre("", "FROM");
		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:115:85:
			// (req= sous_requete (c= conj req2= sous_requete )* )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:116:2: req=
			// sous_requete (c= conj req2= sous_requete )*
			{
				pushFollow(FOLLOW_sous_requete_in_sous_requetes632);
				req = sous_requete();

				state._fsp--;

				sous_requete_arbres.ajouteFils(sr_FROM);
				sous_requete_arbres.ajouteFils(sr_WHERE);
				sr_FROM.ajouteFils(new Arbre(req.sous_requete_arbre.fils.mot));
				sr_WHERE.ajouteFils(req.sous_requete_arbre.fils.frere);

				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:122:2:
				// (c= conj req2= sous_requete )*
				loop4: do {
					int alt4 = 2;
					int LA4_0 = input.LA(1);

					if (((LA4_0 >= CONJET && LA4_0 <= CONJOU))) {
						alt4 = 1;
					}

					switch (alt4) {
					case 1:
					// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:122:3:
					// c= conj req2= sous_requete
					{
						pushFollow(FOLLOW_conj_in_sous_requetes642);
						c = conj();

						state._fsp--;

						pushFollow(FOLLOW_sous_requete_in_sous_requetes648);
						req2 = sous_requete();

						state._fsp--;

						sr_FROM.ajouteFils(new Arbre(","));
						sr_FROM.ajouteFils(new Arbre(
								req2.sous_requete_arbre.fils.mot));
						sr_WHERE.ajouteFils(c);
						sr_WHERE.ajouteFils(req2.sous_requete_arbre.fils.frere);
						if (req2.type.equals("auteur")
								|| req2.type.equals("date")) {
							sr_WHERE.ajouteFils(new Arbre("OR",
									req.sous_requete_arbre.fils.mot + "."
											+ req.type + " = "
											+ req2.sous_requete_arbre.fils.mot
											+ "." + req.type));
						} else {
							sr_WHERE.ajouteFils(new Arbre("AND",
									req.sous_requete_arbre.fils.mot + "."
											+ req.type + " = "
											+ req2.sous_requete_arbre.fils.mot
											+ "." + req.type));
						}

					}
						break;

					default:
						break loop4;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return sous_requete_arbres;
	}

	// $ANTLR end "sous_requetes"

	public static class sous_requete_return extends ParserRuleReturnScope {
		public Arbre sous_requete_arbre = null;
		public String type = "";
	};

	// $ANTLR start "sous_requete"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:152:1: sous_requete
	// returns [Arbre sous_requete_arbre = null, String type = \"\"] : (req=
	// requete_auteur | req= requete_article[\"titreresume\"] | req=
	// requete_date | req= requete_theme[\"theme\"] | req=
	// requete_titre[\"titre\"] | req= requete_rubrique[\"titreresume\"] ) ;
	public final GrammarParser.sous_requete_return sous_requete()
			throws RecognitionException {
		GrammarParser.sous_requete_return retval = new GrammarParser.sous_requete_return();
		retval.start = input.LT(1);

		Arbre req = null;

		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:153:12: (
			// (req= requete_auteur | req= requete_article[\"titreresume\"] |
			// req= requete_date | req= requete_theme[\"theme\"] | req=
			// requete_titre[\"titre\"] | req= requete_rubrique[\"titreresume\"]
			// ) )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:154:2: (req=
			// requete_auteur | req= requete_article[\"titreresume\"] | req=
			// requete_date | req= requete_theme[\"theme\"] | req=
			// requete_titre[\"titre\"] | req= requete_rubrique[\"titreresume\"]
			// )
			{
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:154:2:
				// (req= requete_auteur | req= requete_article[\"titreresume\"]
				// | req= requete_date | req= requete_theme[\"theme\"] | req=
				// requete_titre[\"titre\"] | req=
				// requete_rubrique[\"titreresume\"] )
				int alt5 = 6;
				switch (input.LA(1)) {
				case AUTEUR: {
					alt5 = 1;
				}
					break;
				case MOT: {
					alt5 = 2;
				}
					break;
				case PARAITRE: {
					alt5 = 3;
				}
					break;
				case THEME: {
					alt5 = 4;
				}
					break;
				case TITRE: {
					alt5 = 5;
				}
					break;
				case RUBRIQUE: {
					alt5 = 6;
				}
					break;
				default:
					NoViableAltException nvae = new NoViableAltException("", 5,
							0, input);

					throw nvae;
				}

				switch (alt5) {
				case 1:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:155:3:
				// req= requete_auteur
				{
					pushFollow(FOLLOW_requete_auteur_in_sous_requete685);
					req = requete_auteur();

					state._fsp--;

					retval.sous_requete_arbre = req;
					retval.type = "auteur";

				}
					break;
				case 2:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:159:3:
				// req= requete_article[\"titreresume\"]
				{
					pushFollow(FOLLOW_requete_article_in_sous_requete697);
					req = requete_article("titreresume");

					state._fsp--;

					retval.sous_requete_arbre = req;
					retval.type = "titre";

				}
					break;
				case 3:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:163:3:
				// req= requete_date
				{
					pushFollow(FOLLOW_requete_date_in_sous_requete711);
					req = requete_date();

					state._fsp--;

					retval.sous_requete_arbre = req;
					retval.type = "date";

				}
					break;
				case 4:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:167:3:
				// req= requete_theme[\"theme\"]
				{
					pushFollow(FOLLOW_requete_theme_in_sous_requete723);
					req = requete_theme("theme");

					state._fsp--;

					retval.sous_requete_arbre = req;
					retval.type = "theme";

				}
					break;
				case 5:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:171:3:
				// req= requete_titre[\"titre\"]
				{
					pushFollow(FOLLOW_requete_titre_in_sous_requete737);
					req = requete_titre("titre");

					state._fsp--;

					retval.sous_requete_arbre = req;
					retval.type = "titre";

				}
					break;
				case 6:
				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:175:3:
				// req= requete_rubrique[\"titreresume\"]
				{
					pushFollow(FOLLOW_requete_rubrique_in_sous_requete751);
					req = requete_rubrique("titreresume");

					state._fsp--;

					retval.sous_requete_arbre = req;
					retval.type = "rubrique";

				}
					break;

				}

			}

			retval.stop = input.LT(-1);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return retval;
	}

	// $ANTLR end "sous_requete"

	// $ANTLR start "params"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:186:1: params[String
	// table] returns [Arbre les_pars_arbre = new Arbre(\"\")] : par1=
	// param[table] (c= conj par2= param[table] )* ;
	public final Arbre params(String table) throws RecognitionException {
		Arbre les_pars_arbre = new Arbre("");

		Arbre par1 = null;

		Arbre c = null;

		Arbre par2 = null;

		Arbre par1_arbre, par2_arbre, conj_arbre;
		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:187:52:
			// (par1= param[table] (c= conj par2= param[table] )* )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:188:3: par1=
			// param[table] (c= conj par2= param[table] )*
			{
				pushFollow(FOLLOW_param_in_params789);
				par1 = param(table);

				state._fsp--;

				par1_arbre = par1;
				les_pars_arbre.ajouteFils(par1_arbre);

				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:193:3:
				// (c= conj par2= param[table] )*
				loop6: do {
					int alt6 = 2;
					int LA6_0 = input.LA(1);

					if ((LA6_0 == CONJET)) {
						int LA6_1 = input.LA(2);

						if ((LA6_1 == VAR_MOT)) {
							alt6 = 1;
						}

					} else if ((LA6_0 == CONJOU)) {
						int LA6_2 = input.LA(2);

						if ((LA6_2 == VAR_MOT)) {
							alt6 = 1;
						}

					}

					switch (alt6) {
					case 1:
					// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:193:4:
					// c= conj par2= param[table]
					{
						pushFollow(FOLLOW_conj_in_params805);
						c = conj();

						state._fsp--;

						pushFollow(FOLLOW_param_in_params811);
						par2 = param(table);

						state._fsp--;

						conj_arbre = c;
						par2_arbre = par2;
						les_pars_arbre.ajouteFils(conj_arbre);
						les_pars_arbre.ajouteFils(par2_arbre);

					}
						break;

					default:
						break loop6;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return les_pars_arbre;
	}

	// $ANTLR end "params"

	// $ANTLR start "param"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:204:1: param[String
	// table] returns [ Arbre lepar_arbre = new Arbre(\"\")] : a= VAR_MOT ;
	public final Arbre param(String table) throws RecognitionException {
		Arbre lepar_arbre = new Arbre("");

		Token a = null;

		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:204:67: (a=
			// VAR_MOT )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:205:2: a=
			// VAR_MOT
			{
				a = (Token) match(input, VAR_MOT, FOLLOW_VAR_MOT_in_param844);
				lepar_arbre.ajouteFils(new Arbre(table + ".mot like ", "'%"
						+ a.getText() + "%'"));

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return lepar_arbre;
	}

	// $ANTLR end "param"

	// $ANTLR start "emails"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:209:1: emails
	// returns [Arbre emails_arbre = new Arbre(\"\")] : email1= email (c= conj
	// email2= email )* ;
	public final Arbre emails() throws RecognitionException {
		Arbre emails_arbre = new Arbre("");

		Arbre email1 = null;

		Arbre c = null;

		Arbre email2 = null;

		Arbre email1_arbre, email2_arbre, conj_arbre;
		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:210:56:
			// (email1= email (c= conj email2= email )* )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:211:2:
			// email1= email (c= conj email2= email )*
			{
				pushFollow(FOLLOW_email_in_emails874);
				email1 = email();

				state._fsp--;

				email1_arbre = email1;
				emails_arbre.ajouteFils(email1_arbre);

				// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:216:2:
				// (c= conj email2= email )*
				loop7: do {
					int alt7 = 2;
					int LA7_0 = input.LA(1);

					if ((LA7_0 == CONJET)) {
						int LA7_1 = input.LA(2);

						if ((LA7_1 == VAR_EMAIL)) {
							alt7 = 1;
						}

					} else if ((LA7_0 == CONJOU)) {
						int LA7_2 = input.LA(2);

						if ((LA7_2 == VAR_EMAIL)) {
							alt7 = 1;
						}

					}

					switch (alt7) {
					case 1:
					// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:216:3:
					// c= conj email2= email
					{
						pushFollow(FOLLOW_conj_in_emails886);
						c = conj();

						state._fsp--;

						pushFollow(FOLLOW_email_in_emails892);
						email2 = email();

						state._fsp--;

						conj_arbre = c;
						email2_arbre = email2;
						emails_arbre.ajouteFils(conj_arbre);
						emails_arbre.ajouteFils(email2_arbre);

					}
						break;

					default:
						break loop7;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return emails_arbre;
	}

	// $ANTLR end "emails"

	// $ANTLR start "email"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:226:1: email returns
	// [Arbre email_arbre = new Arbre(\"\")] : a= VAR_EMAIL ;
	public final Arbre email() throws RecognitionException {
		Arbre email_arbre = new Arbre("");

		Token a = null;

		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:227:11: (a=
			// VAR_EMAIL )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:228:2: a=
			// VAR_EMAIL
			{
				a = (Token) match(input, VAR_EMAIL,
						FOLLOW_VAR_EMAIL_in_email925);

				email_arbre.ajouteFils(new Arbre("email like ", "'%"
						+ a.getText() + "%'"));

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return email_arbre;
	}

	// $ANTLR end "email"

	// $ANTLR start "requete_auteur"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:234:1:
	// requete_auteur returns [Arbre auteur_arbre = new Arbre(\"\")] : AUTEUR
	// emailz= emails ;
	public final Arbre requete_auteur() throws RecognitionException {
		Arbre auteur_arbre = new Arbre("");

		Arbre emailz = null;

		try {
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:235:11: (
			// AUTEUR emailz= emails )
			// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:236:2:
			// AUTEUR emailz= emails
			{
				match(input, AUTEUR, FOLLOW_AUTEUR_in_requete_auteur950);

				auteur_arbre.ajouteFils(new Arbre("FROM", "email"));

				pushFollow(FOLLOW_emails_in_requete_auteur959);
				emailz = emails();

				state._fsp--;

				auteur_arbre.ajouteFils(emailz);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return auteur_arbre;
	}

	// $ANTLR end "requete_auteur"

	// $ANTLR start "requete_article"
	// E:\\Projects\\lo17a008\\antlr\\ressources\\Grammar.g:244:1:
	// requete_article[String table] returns [Arbre article_arbre = new
	// Arbre(\"\")] : MOT paramz= params[table] ;
	public final Arbre requete_article(String table)
			throws RecognitionException {
		Arbre article_arbre = new Arbre("");

		Arbre paramz = null;
